safari fix - overflowing images

--- a/app/components/folio/file_list/file_component.sass
+++ b/app/components/folio/file_list/file_component.sass
@@ -47,7 +47,8 @@
     width: auto
     height: auto
     flex: 0 1 auto
-    position: relative
+    position: absolute
+    object-fit: contain
     z-index: 2
     cursor: pointer
 
